--- a/style.css
+++ b/style.css
@@ -3,5 +3,902 @@
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
+    list-style: none;
+}
+.navbar{
+    cursor: pointer;
+}
+.images{
+    background-image: url(./gallery/Rectangle\ 450.svg);
+    height: 149px;
+    width: 256px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  
+}
+.images a{
+    cursor: pointer;
+    z-index: 30;
+}
+header {
+    background-image: url("./gallery/Mask\ Group\ \(2\).svg"); /* Updated file name */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 1080px;
+    width: 100%;
+    margin: 0 auto;
+    position:relative;
+    top: 0;
+    left: 0;
+   z-index: 0;
+}
+
+.second-header {
+    background-image: url("./gallery/divani4.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 1080px;
+    width: 100%;
+    margin: 0 auto;
+    position:relative;
+    top: 0;
+    left: 0;
+    z-index: 0;
+ 
+}
+
+
+.third-header {
+    background-image: url("./gallery/tt.webp"); /* Updated file name */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 1080px;
+    width: 100%;
+    margin: 0 auto;
+    position:relative;
+    top: 0;
+    left: 0;
+
+   
+}
+
+.navbar {
+    z-index: 50;
+    position: relative;
+}
+.background{
+    position: absolute;
+    margin-bottom: 1400px;
+}
+
+header, .second-header {
+    z-index: 0;
+    position: relative; /* Keep it below navbar */
+}
+
+
+.container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: row;
+    margin: 0 auto;
+    max-width: 1500px;
+    z-index: 10;
+     position: relative; 
+  
+    
+}
+
+
+
+.navbar{
+    display: flex;
+    gap: 89px;
+    cursor: pointer;
+}
+
+
+.navbar  a{
+    color: #fff;
+    line-height: auto;
+    font-size: larger;
+    font-weight: 800;
+    cursor: pointer;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+   transition-duration: 0.3s;
+   z-index: 20;
+}
+.navbar a:hover{
+    text-decoration: underline;
+}
+.bar a{
+    color: #fff;
+    line-height: auto;
+    font-size: larger;
+    font-weight: 800;
+    cursor: pointer;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+   transition-duration: 0.3s;
+   z-index: 20;
+}
+
+.bar a:hover{
+    text-decoration: underline;
+}
+
+.background{
+    margin-top:350px;
+}
+.background h1 {
+  font-size: 134px;
+  font-weight: bold;
+  letter-spacing: 4px;
+  margin-bottom: 20px;
+  color: #fff;
+}
+.background h3 {
+    font-size: 53px;
+    letter-spacing: 2px;
+    margin-bottom: 10px;
+    z-index: 1000;
+    color: #fff;
+  }
+  .background h2 {
+    font-size: 53px;
+    letter-spacing: 2px;
+    margin-bottom: 10px;
+    z-index: 1057;
+    color: #fff;
+  }
+.background p{
+    font-size: 20px;
+    font-weight: normal;
+    margin-top: 10px;
+    line-height: 1.6;
+    width: 350px;
+    margin-bottom: 35px;
+    color: #fff;
+
+}
+
+.section1{
+    position: relative;
+    color: #fff;
+}
+
+.btn1{
+    
+    padding: 12px 50px;
+    background-color: #E0B973;
+    border-radius: 13px;
+    font-size: medium;
+    font-weight: bold;
+    color: #fff;
+    cursor: pointer;
+    border: 1px solid black;
+}
+.btn1:hover{
+    padding: 12px 50px;
+    background-color: white;
+    border-radius: 13px;
+    font-size: medium;
+    font-weight: bold;
+    color: #E0B973;
+    border: 1px solid black;
+    cursor: pointer;
+/* margin-left: 50%;
+margin-top: 100px;
+cursor: pointer; */
+}
+.section2 h1{
+    display:flex;
+    justify-content: center;
+    margin-top: 13px;
+    font-size: 40px;
+    font-weight: lighter;
+    margin-bottom: 93px;
+    
+}
+
+.text-content h2{  
+    font-size: 50px;
+    letter-spacing: 4px;
+    margin-bottom: 50px;
+    
+ 
+}
+.text-content p{
+    font-size: 20px;
+    font-weight: 4px;
+    width: 500px;
+    margin-top: 15px;
+    margin-bottom: 60px;
+    letter-spacing: 3px;
+}
+.images1 img{
+    margin-bottom: 30px;
+  height: 579px;
+  width: 866px;  
+}
+.section2{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 140px;
+    
+}
+
+.logos{
+    display: flex;
+    flex-direction: column;
+    gap: 22px;
+    margin-top: 40px;
+}
+.bar{
+    display: flex;
+    flex-direction: column;
+    gap: 22px;
+    margin-top: 40px;
+}
+.links{
+    display: flex;
+    flex-direction: column;
+    gap: 22px;
+    margin-top: 40px;
+}
+
+
+footer{
+   
+    background-color: #14274A;
+    height: 320px;
+    width: 100%;
+   
+    
+}
+
+.links img{
+    height: 18px;
+    width: 18px;
+}
+.links a{
+    color: #fff;
+    line-height: auto;
+    font-size: larger;
+    font-weight: 700;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+cursor: pointer;
+
+}
+.bar{
+        display: flex;
+        gap: 50px;
+}
+.bar a{
+    color: #fff;
+    line-height: auto;
+    font-size: larger;
+    font-weight: 700;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+cursor: pointer;
+}
+.logos p,a{
+    color: #fff;
+    line-height: 13px;
+    font-weight: 300;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    cursor: pointer;
+}
+.logos img{
+    cursor: pointer;
+}
+
+
+
+.title {
+    font-size: 50px;
+    letter-spacing: 4px;
+    margin-top: 82px;
+    
+ 
+}
+.para{
+    font-size: 20px;
+    font-weight: 4px;
+    width: 1200px;
+    margin-top: 34px;
+    margin-bottom: 30px;
+    letter-spacing: 3px;
+}
+.section3{
+
+    margin-bottom: 360px;
+    z-index: 340;
+   
+}
+.gal{
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+
+
+    
+
+.im img {
+  
+    height: 1052px;
+    width: 1580px;
+    border-radius: 15px;
+    margin-top: 70px;
+    
+
+}
+
+.im a{
+  padding: 20px 100px;
+  border: 2px black solid;
+   background-color:#fff;
+    font-size: 50px;
+    font-weight: bold;
+    color: black;
+    margin-left: 590px;
+}
+.titles{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    
+}
+.d3 img{
+    height: 926px;
+    width: 1600px;
+    margin-top: 80px;
+}
+.d3{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-bottom: 20px;
+    
+}
+.d3 h3{
+    color: white;
+    font-size: 50px;
+    font-weight: bold;
+    padding: 41px 400px;
+    background-color: #14274A;
+    
+}
+.lg {
+  height: 157px;
+  width: 1163px;
+  
+   /* padding: 70px 457px;  */
+   background-color: #fff;
+   border: 2px solid #14274A;
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+
+}
+.s{
+margin: auto 70px;
+color: #14274A;
+font-weight: 500;
+}
+.btn7{
+    margin: auto 70px;
+    padding: 12px 30px;
+    background-color: #E0B973;
+    border-radius: 13px;
+    font-size: medium;
+    font-weight: bold;
+    color: #fff;
+    cursor: pointer;
+    border: 1px solid black;
+}
+.btn7:hover{
+    margin: auto 70px;
+    padding: 12px 30px;
+    background-color: #fff;
+    border-radius: 13px;
+    font-size: medium;
+    font-weight: bold;
+    color: #E0B973;
+    cursor: pointer;
+    border: 1px solid black;
+}
+.section-rooms{
+     margin-top: 30px; 
+  
+}
+.second-footer{
+    height: 465px;
+   
+    background-color: #14274A;
+    
+    width: 100%;
+}
+.ft{
+    max-width: 1920px;
+    margin: 0 auto;
+}
+.second-footer h2{
+    color: #fff;
+    font-size: 80px;
+    font-weight: bolder;
+    margin-left: 760px;
+    margin-top: 80px;
+    
+}
+.section-last{
+    margin-top: 200px;
+}
+
+.box{
+    max-width: 1509px;
+    margin: 0 auto;
+    display: flex;
+    gap: 60px;
+    flex-direction: column;
+   
+   
+}
+.box h2{
+    font-size: 50px;
+    letter-spacing: 4px;
+    margin-top: 82px;
+    color: #000;
+    
+}
+.box a{
+    
+    text-decoration: none;
+    color: #14274A;
+    font-size: 38px;
+    font-weight: 600;
+   
+
+}
+.box h3{
+    font-size: 30px;
+    letter-spacing: 2px;
+    margin-top: 30px;
+    color: #000;
+}
+.box p{
+    font-size: 20px;
+    font-weight: 4px;
+    width: 1200px;
+
+    margin-bottom: 30px;
+    letter-spacing: 3px;
+    color: #000;
+}
+
+.section-rooms{
+    margin-bottom: 100px;
+}
+form {
+     max-width: 400px; 
+      margin: 50px auto;  
+    } 
+label {
+     font-weight: bold;
+ }
+ input, textarea, button{
+     width: 100%; 
+     padding: 10px;
+      margin-top: 5px;
+       border: 1px solid #ccc;
+        border-radius: 4px;
+         box-sizing: border-box; 
+    }
+  textarea {
+     height: 100px; 
+}
+   button { background-color: #E0B973; color: #333; border: none; cursor: pointer;
+ }
+    button:hover { background-color: #ddd; 
+    }
+    
+    .menu {
+        display: none;
+    }
+    .hamburger{
+        display: none;
+    }
+    
+    .hamburger i {
+        cursor: pointer;
+        font-size: 34px;
+        color: white;
+        display: none;
+    }
+    
+    .sidebar-menu {
+        display: none;
+        position: fixed;
+        top: 0px;
+        left: -250px;
+        width: 130px;
+        height: 100%;
+        background-color: #14274A;
+        display: flex;
+        flex-direction: column;
+        padding-top: 40%;
+        gap: 80px;
+        padding-left: 30px;
+        transition: 0.3s ease;
+        border-top: 3px solid black;
+        /* border-right: 3px solid black; */
+    }
+    
+    .sidebar-menu a {
+        color: #fff;
+    line-height: auto;
+    font-size: large;
+    font-weight: 30px;
+    cursor: pointer;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    
+        
+    }
+    
+    #menu:checked ~ .sidebar-menu {
+        left: 0;
+    }
+
+
+    .modal{
+        background-image: url("./gallery/sl.webp");
+        height: 700px;
+        width: 700px;
+        border: 3px solid black;
+        position: absolute;
+        top: 30%;
+        left: 50%;
+        display: none;
+        align-items: center;
+        justify-content: center;
+        z-index: 10;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        /* background-color: #14274A; */
+    
+    }
+  
+    .ads{
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        margin-right: 8px;
+    }
+    .overlay{
+        display: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 8;
+        background-color: rgba(0, 0, 0, 0.8);
+        
+    }
+    
+    #ii{
+        cursor: pointer;
+    }
+    
+    /* input {
+        padding: 10px;
+        width: 300px;
+        margin-bottom: 10px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        margin-left: 40px;
+    } */
+ 
+     
+.s{
+    
+    color: black;
+    z-index: 30000;
+}
+.k{
+    font-size: 45px;
+    color: #fff;
+}
+.j{
+    display: none;
+}
+@media only screen and (max-width: 1023px){
+.im img{
+    height: 500px;
+    width: 700px;
+    margin-left: 140px;
+}
+.im a{
+    padding: 3px 19px;
+    font: 20px;
+    margin-left: 370px;
+    font-weight: lighter;
+}
+.second-header{
+    height: 800px;
+    width: 1400px;
+    margin-bottom: 2px;
+}
+
+.third-header{
+    height: 800px;
+    width: 1400px;
+    margin-bottom: 2px;
+}
+.title{
+    font-size: 40px;
+    letter-spacing: 2px;
+    margin-top: 10px;
+    margin-left: 250px;
+}
+.para{
+    font-size: 16px;
+    font-weight: 4px;
+    width: 900px;
+    margin-bottom: 34px;
+    letter-spacing: 2px;
+    margin-left: 280px;
+}
+.gal{
+    justify-content: center;
+    align-items: center;
+}
+footer{
+    height: 300px;
+    margin-top: 40px;
+    width: 1400px;
+}
+header{
+    width: 1400px;
+    height: 800px;
+ 
+}
+.container{
+    max-width: 100%;
+}
+
+.section3{
+    margin-left: 200px;
+    margin-top: 10px;
+    margin-bottom: 300px;
+}
+.images{
+    height: 90px;
+    width: 176px;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+}
+.images img{
+  height: 90px;
+  width: 130px;
+
+}
+.navbar{
+    gap: 60px;
+}
+.navbar a{
+    font-size: large;
+    font-weight: 500;
+}
+.container{
+    max-width: 900px;
+}
+.background h1{
+    font-size: 90px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  margin-bottom: 10px;  
+}
+.background h3 {
+    font-size: 33px;
+    letter-spacing: 1px;
+    margin-bottom: 5px;
+    z-index: 1000;
+  }
+  .background{
+    margin-left: 250px;
+    margin-top: 600px;
+  }
+  .section2 h1{
+    margin-top: 40px;
+    font-size: 30px;
+    margin-bottom: 50px;
+  
+  }
+  .text-content h2{
+    font-size: 30px;
+    letter-spacing: 2px;
+ 
+}
+.text-content p{
+    font-size: 17px;
+    font-weight: 3px;
+    width: 500px;
+    margin-top: 15px;
+    margin-bottom: 30px;
+    letter-spacing: 3px;
+}
+.images1 img{
+    margin-bottom: 30px;
+  height: 479px;
+  width: 676px;  
+}
+.section2{
+    margin-left: 140px;
+}
+.t{
+    left: 60%;
+}
+  form{
+   margin-left: 1300px;
+   margin-top: 60px;
+  }
+  .d3{
+    margin-left: 70px;
+  }
+  .d3 img{
+    height: 626px;
+    width: 1200px;
+    margin-top: 60px;
+  }
+  .d3 h3{
+    font-size: 40px;
+    font-weight: bold;
+    padding: 31px 250px;
+    background-color: #14274A;
+
+  }
+  .lg{
+    height: 137px;
+  width: 790px;
+  }
+  .section-rooms{
+    margin-left: 50px;
+    margin-bottom: 40px; 
+   
+  }
+  .titles{
+    margin-left: 200px;
+  }
+  .im img{
+    margin-left: 200px;
+  }
+  .second-footer{
+    width: 1400px;
+    height: 300px;
+  }
+  .second-footer h2{
+    font-size: 55px;
+    font-weight: bolder;
+    margin-left: 600px;
+    margin-top: 50px;
+}
+.box h2{
+    font-size: 36px;
+    letter-spacing: 3px;
+    margin-top: 62px;
+    margin-left: 20px;
+}
+.box p{
+    font-size: 19px;
+    font-weight: 4px;
+    width: 1000px;
+    margin-left: 20px;
+    margin-bottom: 20px;
+    letter-spacing: 2px;
+    
+}
+.box h3{
+    font-size: 20px;
+    letter-spacing: 3px;
+    margin-top: 20px;
+    margin-left: 20px;
+}
+.box a{
+    font-size: 34px;
+    font-weight: 400;
+    margin-left: 20px;
+}
+input, textarea, button{
+   width: 600px;
+   padding: 8px;
+   margin-top: 5px;
+  
+}
+textarea{
+    height: 80px;
+}
+form{
+    margin-left: 20px;
+}
+.overlay{
+    padding: 1700px 1200px;
+}
+}
+
+
+@media only screen and (max-width: 767px){
+    .navbar {
+        display: none;
+    }
+
+    .hamburger {
+        display: flex;
+        margin-left: auto;
+        display: flex;
+    
+    }
+
+    .header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+    }
+    .fa-solid{
+        margin-right: 40px;
+    }
+
+    .container {
+        justify-content: space-between;
+    }
+    .hamburger i {
+        display: flex;
+    }
+  .section3{
+    margin-left: 600px;
+  } 
+  .im img{
+    margin-left: -186px;
+  }
+ .section-rooms{
+     margin-left: 160px; 
+  }
+  .jj{
+  
+    margin-left: 800px;
+  }
+  .dd {
+    font-size: 30px;
+    letter-spacing: 2px;
+    margin-top: 22px;
+    margin-left: 800px;
+    
+      }
+     .d3 h3{
+        padding-left: 250px;
+        padding-right: 250px;
+        background-color: #14274A;
+     }
+
+  .text-content h2{
+    margin-bottom: 40px;
+  }
+  .text-content p{
+    margin-bottom: 50px;
+  }
 
 }
